# nba-wins-pool

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.formatting.yml  compose.override.yml  compose.prod.yml  compose.testing.yml  compose.yml  leaderboard.prof  makefile  pyproject.toml
backend/: Dockerfile  README.md  migrate.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_01_0409-747863cb5e72.py  2025_09_02_0141-11588b6a4367.py  2025_09_05_0131-50bbce71ae35.py  2025_09_05_0513-08eb67804686.py  2025_09_05_0540-9ed4d0e4c71b.py  2025_09_08_0020-f9f5f3359c5f.py  2025_11_21_2206-033945df4143.py  2026_01_05_2104-96b70026abf4.py  2026_01_09_1947-d0a22e027ec0.py  2026_01_09_2200-03952af4afac.py  2026_01_10_2152-7bf04b1e95c9.py  2026_01_12_0658-df6a47162ffe.py  2026_03_31_0423-14ebf197c4b6.py  2026_04_13_0421-1a4a33f7ac40.py  2026_04_16_0439-9d02d7cb56c8.py  2026_04_28_0528-fd42386bd6dd.py  2026_04_30_0411-1815d0891b28.py  2026_04_30_2229-36a3fcedf954.py
backend/notebooks/playoff_wins_regression/: playoff_wins_regression.ipynb
backend/notebooks/playoff_wins_regression/bbref_playoff_records/: 2014-2015.csv  2015-2016.csv  2016-2017.csv  2017-2018.csv  2018-2019.csv  2019-2020.csv  2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv  readme.md
backend/notebooks/playoff_wins_regression/sportsoddshistory/: readme.md
backend/notebooks/playoff_wins_regression/sportsoddshistory/2014-2015/: make_playoffs.csv  regular_season_wins.csv  win_championship.csv  win_conference.csv
backend/notebooks/playoff_wins_regression/sportsoddshistory/2015-2016/: make_playoffs.csv  regular_season_wins.csv  win_championship.csv  win_conference.csv
backend/notebooks/playoff_wins_regression/sportsoddshistory/2016-2017/: make_playoffs.csv  regular_season_wins.csv  win_championship.csv  win_conference.csv
backend/notebooks/playoff_wins_regression/sportsoddshistory/2017-2018/: make_playoffs.csv  regular_season_wins.csv  win_championship.csv  win_conference.csv
backend/notebooks/playoff_wins_regression/sportsoddshistory/2018-2019/: make_playoffs.csv  regular_season_wins.csv  win_championship.csv  win_conference.csv
backend/src/nba_wins_pool/: aggregations.py  auction_data.py  job_definitions.py  main_backend.py  nba_data.py  team_owner.json
backend/src/nba_wins_pool/api/: __init__.py  auction.py  leaderboard.py  pool.py
backend/src/nba_wins_pool/data/: fanduel_team_to_tricode.json  kk_team_owner.csv  kk_team_owner.json  milestones.csv  nba-team-details.json  nba_tricode_to_id.json  sg_team_owner.csv  sg_team_owner.json
backend/src/nba_wins_pool/db/: core.py
backend/src/nba_wins_pool/event/: broker.py  core.py
backend/src/nba_wins_pool/models/: __init__.py  auction.py  auction_event_log.py  auction_lot.py  auction_participant.py  auction_valuation.py  bid.py  external_data.py  member.py  nba_projections.py  nba_vegas_data.py  pool.py  pool_season.py  roster.py  roster_slot.py  season_milestone.py  simulation_results.py  team.py  team_ownership.py
backend/src/nba_wins_pool/repositories/: auction_event_log_repository.py  auction_lot_repository.py  auction_participant_repository.py  auction_repository.py  bid_repository.py  external_data_repository.py  nba_projections_repository.py  nba_vegas_repository.py  pool_repository.py  pool_season_repository.py  roster_repository.py  roster_slot_repository.py  simulation_results_repository.py  team_repository.py
backend/src/nba_wins_pool/routes/: __init__.py  auction_bids.py  auction_lots.py  auction_participants.py  auctions.py  docs.py  health.py  pool.py  pool_seasons.py  pools.py  roster_slots.py  rosters.py  sse.py  team_colors.py  teams.py
backend/src/nba_wins_pool/scripts/: fetch_nba_projections.py  run_simulation.py  seed_data.py  seed_milestones.py  seed_team_owners.py  seed_teams.py
backend/src/nba_wins_pool/services/: __init__.py  auction_draft_service.py  auction_event_service.py  auction_valuation_service.py  leaderboard_service.py  nba_data_service.py  nba_espn_projections_service.py  nba_vegas_projections_service.py  pool_season_service.py  pool_service.py  scheduler_service.py  team_colors_service.py  wins_race_service.py
backend/src/nba_wins_pool/types/: nba_game_status.py  nba_game_type.py  season_str.py
backend/src/nba_wins_pool/utils/: cache.py  error.py  safe_cast.py  season.py  server_sent_events.py  spa_static_files.py  time.py
backend/tests/: conftest.py  test_aggregations.py  test_auction_draft_service.py  test_auction_valuation_service.py  test_job_definitions.py  test_leaderboard_service.py  test_nba_data.py  test_nba_data_service.py  test_nba_espn_projections_service.py  test_nba_projections_repository.py  test_nba_simulator_data.py  test_nba_vegas_projections_service.py  test_routes_api.py  test_routes_pools_wins_race.py  test_wins_race_service.py
backend/tests/fixtures/: expected-futures-probs.csv  expected_fanduel_probs.json  sample-espn-bpi-response.json  sample-espn-nba-season.json  sample-fanduel-futures-response.json  sample-fanduel-futures-suspended-response.json  sample-fanduel-ingame-response.json  sample-fanduel-playoff-futures-response.json  sample-fanduel-response.json  sample-nba-gamecardfeed-response-playoffs.json  sample-nba-gamecardfeed-response.json  sample-nba-odds-today-response.json  sample-nba-playin-bracket-response.json  sample-nba-playoff-bracket-response.json
backend/tests/unit/services/: test_nba_data_service_season_parsing.py
(+129 files in other folders)
