[project]
name = "nba-wins-pool"
version = "0.0.1"
description = "Web app for displaying standings and analysis for NBA Wins Pool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "nba-api>=1.10.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nba_wins_pool"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
    "fastapi-cli>=0.0.5",
    "pytest>=8.3.3",
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[project.scripts]
nbawinspool_deploy = "services.deploy:entrypoint"
